# highPerformanceLogger

./: CMakeLists.txt  README.md
include/: logger.h
src/: logger.cpp  main.cpp
